--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     background-color:#198754;
   }
   .bags .icon{
-      background:url("Bag.jpg");
+      background:url("bag.jpg");
     }  
 </style>
 </head>
